--- a/client/src/CreateEvent/createEvent.module.scss
+++ b/client/src/CreateEvent/createEvent.module.scss
@@ -1,3 +1,55 @@
 .container {
-  border: 2px solid red;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.page {
+    background-attachment: fixed;
+    background-image: url(./reka.jpeg);
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 1200px;
+    z-index: 1;
+    background-color: hsla(0,0%,100%,0.40);
+    background-blend-mode: overlay;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.field {
+  width: 100%;
+  margin-bottom: 15px;
+  height: 45px;
+}
+
+span {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  color: rgb(227, 25, 25);
+}
+
+.navigation {
+  display: flex;
+  height: 40px;
+  background-color: #FBEEC1;
+  justify-content: space-between;
+  padding: 0 20px;
+  align-items: center;
+  a {
+    text-decoration: none;
+    color: black
+  }
+  .divLink {
+    width: 80px;
+    border-radius: 7px;
+    background-color: #DAAD86;
+    text-align: center;
+  }
+  a:hover {
+    color: white;
+  }
 }
