--- a/client/src/SpecCabinet/specCabinet.module.scss
+++ b/client/src/SpecCabinet/specCabinet.module.scss
@@ -7,6 +7,10 @@
   text-align: center;
   font-size: 30px;
   line-height: 40px;
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 .card:hover {
